classDiagram
    %% ── MODEL LAYER ──────────────────────────────────────
    class Member {
        <<Model>>
        +id: str
        +name: str
        +role: Role
        +active: bool
    }

    class RoleChangeRequest {
        <<Model>>
        +id: str
        +requester_id: str
        +target_id: str
        +new_role: Role
        +status: RequestStatus
        +decisions: List[Decision]
        +approve_count() int
        +reject_count() int
        +is_terminal() bool
        +check_voter_eligible(voter_id) Tuple
        +add_decision(decision, target_member) Tuple
        +cancel(actor_id) Tuple
    }

    class Decision {
        <<Model>>
        +request_id: str
        +member_id: str
        +result: DecisionResult
    }

    class Role {
        <<Enum>>
        PRODUCER
        FINANCE
        EDITOR
        CREATOR
    }

    class RequestStatus {
        <<Enum>>
        PENDING
        APPROVED
        REJECTED
        CANCELLED
    }

    class DecisionResult {
        <<Enum>>
        APPROVE
        REJECT
    }

    %% ── SERVICE LAYER ────────────────────────────────────
    class Store {
        <<Service>>
        +members: Dict
        +requests: Dict
        +load_seed(path)
        +get_member(id) Member
        +list_members() List
        +get_request(id) RoleChangeRequest
        +list_requests() List
        +pending_request_for_target(target_id) RoleChangeRequest
        +create_request(requester, target, role) Tuple
        +submit_vote(actor, request, result) Tuple
        +cancel_request(actor, request) Tuple
        +eligible_voters(request_id) List
    }

    %% ── CONTROLLER LAYER ─────────────────────────────────
    class MemberController {
        <<Controller / Blueprint>>
        +index()
        +select_actor()
        +list_members()
    }

    class RequestController {
        <<Controller / Blueprint>>
        +list_requests()
        +create_request()
        +request_detail(id)
        +vote(id)
        +cancel_request(id)
    }

    %% ── VIEW LAYER (Jinja2 Templates) ───────────────────
    class Templates {
        <<View / Jinja2>>
        index.html
        members.html
        requests.html
        request_detail.html
        create_request.html
    }

    %% ── RELATIONSHIPS ────────────────────────────────────
    RoleChangeRequest "1" --> "*" Decision : contains
    RoleChangeRequest --> RequestStatus
    RoleChangeRequest --> Role : new_role
    Decision --> DecisionResult
    Member --> Role

    Store --> Member : manages
    Store --> RoleChangeRequest : manages

    MemberController --> Store : uses
    RequestController --> Store : uses
    MemberController --> Templates : renders
    RequestController --> Templates : renders
